adjust build settings

--- a/simplified-wineapps-installer.csproj
+++ b/simplified-wineapps-installer.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>simplified_wineapps_installer</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
 
   <ItemGroup>
