--- a/simplified-wineapps-installer.csproj
+++ b/simplified-wineapps-installer.csproj
@@ -7,11 +7,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishSingleFile>true</PublishSingleFile>
+    <DebugType>embedded</DebugType>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Qml.Net" Version="0.11.0" />
     <PackageReference Include="Qml.Net.LinuxBinaries" Version="0.11.0" />
+    <Content Include="apps\**"> 
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+  </Content> 
   </ItemGroup>
 
 </Project>
