--- a/simplified-wineapps-installer.csproj
+++ b/simplified-wineapps-installer.csproj
@@ -1,19 +1,27 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Eto.Forms/2.9.0">
+
+  <!--
+    Set the BuildPlatform property to the Eto platform you wish to build for.
+    The default is the platform you are building on.
+    Valid values: Wpf, Windows, Mac64, MacOS, Gtk, Direct2D
+  -->
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>simplified_wineapps_installer</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishSingleFile>true</PublishSingleFile>
     <DebugType>embedded</DebugType>
+    <PublishDir>Output/$(RuntimeIdentifier)</PublishDir>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
+    <Authors>Alexankitty</Authors>
+
+    <UseXeto>True</UseXeto>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Qml.Net" Version="0.11.0" />
-    <PackageReference Include="Qml.Net.LinuxBinaries" Version="0.11.0" />
     <Content Include="apps\**"> 
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
   </Content> 
