--- a/src/simplified-wineapps-installer.csproj
+++ b/src/simplified-wineapps-installer.csproj
@@ -7,24 +7,35 @@
   -->
 
   <PropertyGroup>
+      <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>simplified_wineapps_installer</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishSingleFile>true</PublishSingleFile>
     <DebugType>embedded</DebugType>
-    <PublishDir>Output/$(RuntimeIdentifier)</PublishDir>
+    <PublishDir>../Output/$(RuntimeIdentifier)</PublishDir>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <Authors>Alexankitty</Authors>
-
+    <Description>Simple application for putting together wine/proton prefixes for various programs.</Description>
+    <RepositoryUrl>https://github.com/alexankitty/simplified-wineapps-installer</RepositoryUrl>
+    <Version>0.0.1</Version>
+    <Copyright>Alexankitty 2025</Copyright>
     <UseXeto>True</UseXeto>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="apps\**"> 
-    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
-  </Content> 
+    <Content Include="..apps/**"> 
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+    </Content>
+    <None Remove="**\*.glade" />
+    <EmbeddedResource Include="**\*.glade">
+      <LogicalName>%(Filename)%(Extension)</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="GtkSharp" Version="3.24.24.*" />
   </ItemGroup>
 
 </Project>
